--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
 
                   <p class="banner-text">Sale off 50% only this week</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">RECIPE</button>
                 </div>
 
               </div>
@@ -905,7 +905,7 @@
 
                   <p class="banner-text">50% off Now</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">RECIPE</button>
                 </div>
 
               </div>
@@ -922,7 +922,7 @@
 
                   <p class="banner-text">50% off Now</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">RECIPE</button>
                 </div>
 
               </div>
@@ -939,7 +939,7 @@
 
                   <p class="banner-text">Sale off 50% only this week</p>
 
-                  <button class="btn">Order Now</button>
+                  <button class="btn">RECIPE</button>
                 </div>
 
               </div>
